ChangeLog for Simple Python Fixed-Point Module

18Sep20	- Added FXfamily method for importing two's complement numbers

29Mar20	- Extended accuracy demo plots to include Machin's formula for Pi

27Mar20	- Neatened calculation of FXfamily.exp1
	Added demo plot of accuracy of exp(1)

21Mar20	- *** spfpm-1.5 released

21Mar20	- Improved testing of starting approximation within sqrt() method

15Mar20	- Improved handling of domain errors and edge-cases in __pow__() method

01Nov19	- Patched rounding behaviour on FXnum creation from float

12May18	- Added signed/twos-complement option to FXnum.toBinaryString() method

03May18	- Added 'precision' option to FXnum.toDecimalString() method
	Improved estimation of number of digits in decimal representation

28Apr18	- Replaced asin() formula for pi with Bailey-Borwein-Plouffe series

16Apr18	- *** spfpm-1.4 released

13Apr18	- Added method for printing FXnum as binary/octal/hexadecimal string

11Apr18	- Added shortcut method to FXfamily for creating FXnum instances

24Feb18	- *** spfpm-1.3 released

24Jun17	- Improved convergence of asin() series.
	Replaced atan() computation of pi with asin().

29May17	- Neatened asin() and acos() methods, avoiding use of atan().

28May17	- Improved efficiency of computation of log(2)
	Converted README.txt into markdown

13May17	- Added optimized FXnum constructor to improve speed of arithmetic
	Added command-line switches for demonstration script
	Added plot of Pi accuracy to demonstration script

06May17	- *** spfpm-1.2 released

05May17	- removed need to have same FXfamily object when combining FXnums
	- added '__slots__' specifier to FXnum fields

15Jul14	- *** spfpm-1.1 released

15Jul14	- added left/right shift operators
	improved initialization of FXnum objects from output of repr()

14Jul14	- replaced various getter methods in FXfamily with properties
	added improved expressions for computing exp(1) and log(2)
	updated graph-based demos to use Matplotlib in place of Gnuplot
